@@ -1,0 +1,6 @@
+package com.hifiremote.jp1;
+
+public interface ButtonEnabler
+{
+  public void enableButtons();
+}
